Fix navbar button alignment

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,1 +1,7 @@
+* {
+  border: solid 1px red;
+}
 
+#navbtns {
+  margin-right: 1vw;
+}
